--- a/frontend/package.json
+++ b/frontend/package.json
@@ -14,10 +14,14 @@
     "@emotion/react": "^11.13.3",
     "@emotion/styled": "^11.13.0",
     "@tanstack/react-query": "^5.59.15",
+    "@lighthouse-web3/sdk": "^0.3.4",
+    "axios": "^1.7.7",
     "framer-motion": "^11.11.9",
     "next": "14.2.15",
     "react": "^18",
-    "react-dom": "^18"
+    "react-dom": "^18",
+    "react-icons": "^5.3.0",
+    "react-scroll-to-top": "^3.0.0"
   },
   "devDependencies": {
     "@rainbow-me/rainbowkit": "^2.1.1",
