--- a/frontend/.env
+++ b/frontend/.env
@@ -1,3 +1,6 @@
-NEXT_PUBLIC_USERSIDE_SEPOLIA_ADDRESS=0xa355f2938e7f21650782bcb97df01b394ddfb3b3
-NEXT_PUBLIC_CREATEGOVERNANCE_SEPOLIA_ADDRESS=0x97C51f70a44c0837E02a180e5D116EC2B57c2581
+NEXT_PUBLIC_USERSIDE_SEPOLIA_ADDRESS=0x88F77F62ae159006FA11aFF860834D52011DB8EA
+NEXT_PUBLIC_CREATEGOVERNANCE_SEPOLIA_ADDRESS=0x639d86160B26FAc3eB100233C23c92B6FF27Ffd2
 NEXT_PUBLIC_PROJECT_ID=6b558400ec7cc4d517607a6f28670ec5
+NEXT_PUBLIC_LIGHTHOUSE_API_KEY = cf4c2c28.ea7d1e3379974352858ce453cae0981e
+NEXT_PUBLIC_CREATEGOVERNANCE_AMOY_ADDRESS=0x6dB8F955f5876Ad013d6786C20604d1412582d33
+NEXT_PUBLIC_USERSIDE_AMOY_ADDRESS=0x09355949204600CF26C53328f51BF15d1f5D30e4
